crates/wdl-analysis/tests/validation/missing-command-section/source.errors
error: task `test` is missing a command section
  ┌─ tests/validation/missing-command-section/source.wdl:5:6
  │
5 │ task test {
  │      ^^^^ this task must have a command section

