crates/wdl-analysis/tests/validation/missing-command-section/source.wdl
# This is a test of a missing command section.

version 1.1

task test {
    
}
